<resources>
    <string name="app_name">천안시설 어디야</string>
    <string name="title_activity_maps">Map</string>
    <string name="introTitle">어디야?</string>
    <string name="id">아이디</string>
    <string name="password">패스워드</string>
    <string name="nickname">닉네임</string>
    <string name="loginButton">로그인</string>
    <string name="signup">회원가입</string>
    <string name="findAccount">계정 찾기</string>
    <string name="detailTvNameLabel">장소명</string>
    <string name="detailTvAddressLabel">주소</string>
    <string name="detailTvTimeLabel">개방시간</string>
    <string name="detailTvClosedLabel">폐관일</string>
    <string name="baseUrl">http://202.31.147.236:28080/</string>
    <string name="comment_button">전송</string>
    <string name="preference_file_key">kr.ac.sunmoon.gijoe.camaps.secret</string>
    <string name="secret">secret_key</string>
    <string name="website">웹 사이트</string>
    <string name="pay">요금</string>
    <string name="tel">전화번호</string>
    <string name="corona">코로나 현황</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
