<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".signupActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/field_signup_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            tools:targetApi="O" />

        <EditText
            android:id="@+id/field_signup_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text=""
            android:textAlignment="center"
            tools:targetApi="O" />

        <EditText
            android:id="@+id/field_signup_nickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nickname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            tools:targetApi="O" />

        <Spinner
            android:id="@+id/find_q_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/callSignupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/signup" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>