<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TableLayout
        android:id="@+id/detailDescTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TableRow
            android:id="@+id/detailName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/detailTvNameLabel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/detailOpenTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/detailTvTimeLabel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailOpenTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/detailClosed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/detailTvClosedLabel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailClosedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>
</LinearLayout>